--- a/HTML/form.html
+++ b/HTML/form.html
@@ -4,7 +4,7 @@
         <br/>
         <p>Registrazione utente</p>
 
-        <form action="https://www.google.com/" method="get">
+        <form action="https://www.it.pornhub.com/" method="get">
             <table>
                 <td>
                     Email:
