--- a/HTML/form.html
+++ b/HTML/form.html
@@ -1,114 +1,128 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <br/>
-        <p>Registrazione utente</p>
 
-        <form action="https://www.it.pornhub.com/" method="get">
-            <table>
-                <td>
-                    Email:
-                    <br/>
-                    <input type="text" name="email" id="email" placeholder="Email" size="30px"/>
-                </td>
-                <td width="30px"></td>
-                <td>
-                    Conferma Email:
-                    <br/>
-                    <input type="text" name="confermaEmail" id="email_confirm" placeholder="Conferma Email" size="30px"/>
-                </td>
-            </table>
+<body>
+    <p>Registrazione utente</p>
 
-            <table>
-                <br/>
-                <td>
-                    Password:
-                    <br/>
-                    <input type="password" name="password" id="password" placeholder="Password" size="30px"/>
-                </td>
-                <td width="30px"></td>
-                <td>
-                    Conferma Password:
-                    <br/>
-                    <input type="password" name="password_confirm" id="password_confirm" placeholder="Conferma Password" size="30px"/>
-                </td>
+    <form action="https://www.googl.it/" method="get">
+        <table>
+            <td>
+                Email:
+                <br />
+                <input type="text" name="email" id="email" placeholder="Email" size="30px" />
+            </td>
+            <td width="30px"></td>
+            <td>
+                Conferma Email:
+                <br />
+                <input type="text" name="confermaEmail" id="email_confirm" placeholder="Conferma Email" size="30px" />
+            </td>
+        </table>
 
-                <tr><td colspan="5"><hr color="black"></td></tr>
-            </table>
+        <table>
+            <br />
+            <td>
+                Password:
+                <br />
+                <input type="password" name="password" id="password" placeholder="Password" size="30px" />
+            </td>
+            <td width="30px"></td>
+            <td>
+                Conferma Password:
+                <br />
+                <input type="password" name="password_confirm" id="password_confirm" placeholder="Conferma Password"
+                    size="30px" />
+            </td>
 
-            <table>
-                <td>
-                    Nome:
-                    <br/>
-                    <input type="text" name="nome" id="nome" placeholder="Nome" size="12px"/>
+            <tr>
+                <td colspan="5">
+                    <hr color="black">
                 </td>
-                <td width="30px"></td>
-                <td>
-                    Secondo Nome:
-                    <br/>
-                    <input type="text" name="secondo_nome" id="secondo_nome" placeholder="Secondo Nome"/>
-                </td>
-                <td width="30px"></td>
-                <td>
-                    Cognome:
-                    <br/>
-                    <input type="text" name="cognome" id="cognome" placeholder="Cognome"/>
-                </td>
-            </table>
+            </tr>
+        </table>
 
-            <table>
-                <br/>
-                <td>
-                    Sesso:
-                    <select name="selectGender">
-                        <option value="Gianni">Gianni</option>
-                        <option value="Uomo">Uomo</option>
-                        <option value="Donna">Donna</option>
-                    </select>
-                </td>
-                <td width="30px"></td>
-                <td>
-                    Città ed Indirizzo:
-                    <br/>
-                    <input type="text" name="cittaEIndirizzo" placeholder="Città ed Indirizzo" size="47px"/>
-                </td>
+        <table>
+            <td>
+                Nome:
+                <br />
+                <input type="text" name="nome" id="nome" placeholder="Nome" size="12px" />
+            </td>
+            <td width="30px"></td>
+            <td>
+                Secondo Nome:
+                <br />
+                <input type="text" name="secondo_nome" id="secondo_nome" placeholder="Secondo Nome" />
+            </td>
+            <td width="30px"></td>
+            <td>
+                Cognome:
+                <br />
+                <input type="text" name="cognome" id="cognome" placeholder="Cognome" />
+            </td>
+        </table>
 
-                <tr><td colspan="5"><hr color="black"></td></tr>
-            </table>
+        <table>
+            <br />
+            <td>
+                Sesso:
+                <select name="selectGender">
+                    <option value="Gianni">Gianni</option>
+                    <option value="Uomo">Uomo</option>
+                    <option value="Donna">Donna</option>
+                </select>
+            </td>
+            <td width="30px"></td>
+            <td>
+                Città ed Indirizzo:
+                <br />
+                <input type="text" name="cittaEIndirizzo" placeholder="Città ed Indirizzo" size="47px" />
+            </td>
 
-            <table width="30.9%">
-                <td>
-                    Interessi:
-                    <br/>
-                    <input type="checkbox" name="interessi" value="1">Videogame<br/>
-                    <input type="checkbox" name="interessi" value="2">Arte<br/>
-                    <input type="checkbox" name="interessi" value="3">Distro Hopping<br/>
-                    <input type="checkbox" name="interessi" value="4">Gianni<br/>
+            <tr>
+                <td colspan="5">
+                    <hr color="black">
                 </td>
-                <td width="40px"></td>
-                <td>
-                    Sistema Utilizzato:
-                    <br/>
-                    <input type="radio" name="sistema" value="Linux">Linux<br/>
-                    <input type="radio" name="sistema" value="macOS">macOS<br/>
-                    <input type="radio" name="sistema" value="Windows">Windows<br/>
-                    <input type="radio" name="sistema" value="FreeBSD">FreeBSD<br/>
-                </td>
+            </tr>
+        </table>
 
-                <tr><td colspan="5"><hr color="black"></td></tr>
-            </table>
+        <table width="30.9%">
+            <td>
+                Interessi:
+                <br />
+                <input type="checkbox" name="interessi" value="1">Videogame<br />
+                <input type="checkbox" name="interessi" value="2">Arte<br />
+                <input type="checkbox" name="interessi" value="3">Distro Hopping<br />
+                <input type="checkbox" name="interessi" value="4">Gianni<br />
+            </td>
+            <td width="40px"></td>
+            <td>
+                Sistema Utilizzato:
+                <br />
+                <input type="radio" name="sistema" value="Linux">Linux<br />
+                <input type="radio" name="sistema" value="macOS">macOS<br />
+                <input type="radio" name="sistema" value="Windows">Windows<br />
+                <input type="radio" name="sistema" value="FreeBSD">FreeBSD<br />
+            </td>
 
-            <table>
-                <td>
-                    Accetti le condizioni?
-                    <br/>
-                    <input type="checkbox" name="acceptCondition">accetto!
+            <tr>
+                <td colspan="5">
+                    <hr color="black">
                 </td>
-                <td width="320px"></td>
-                <td>
-                    <button style="background-color: beige;">Invia</button>
-                </td>     
-            </table>
-        </form>
-    </body>
+            </tr>
+        </table>
+
+        <table>
+            <td>
+                Accetti le condizioni?
+                <br />
+                <input type="checkbox" name="acceptCondition">accetto!
+            </td>
+            <td width="320px"></td>
+            <td>
+                <button style="background-color: beige;">Invia</button>
+            </td>
+        </table>
+    </form>
+</body>
+
 </html>
