--- a/HTML/Ex2/boxes.html
+++ b/HTML/Ex2/boxes.html
@@ -5,6 +5,7 @@
 			.black-box 
             {
 				position: absolute;
+                padding: 3px;
                 border: 1px solid black;
                 width: 50%;
                 height: 50%;
