--- a/HTML/Ex2/boxes.html
+++ b/HTML/Ex2/boxes.html
@@ -19,8 +19,8 @@
                 border: 2px solid red;
                 width: 15px;
                 height: 15px;
-                top: -10%;
-                left: -5%;
+                top: -10px;
+                left: -10px;
                 border-bottom: none;
                 border-right: none;
 
@@ -31,8 +31,8 @@
                 border: 2px solid red;
                 width: 15px;
                 height: 15px;
-                top: -10%;
-                right: -5%;
+                top: -10px;
+                right: -10px;
                 border-bottom: none;
                 border-left: none;
             }
@@ -42,8 +42,8 @@
                 border: 2px solid red;
                 width: 15px;
                 height: 15px;
-                bottom: -10%;
-                left: -5%;
+                bottom: -10px;
+                left: -10px;
                 border-top: none;
                 border-right: none;
             }
@@ -53,8 +53,8 @@
                 border: 2px solid red;
                 width: 15px;
                 height: 15px;
-                bottom: -10%;
-                right: -5%;
+                bottom: -10px;
+                right: -10px;
                 border-top: none;
                 border-left: none;
             }
