--- a/Interactive_Shell/index.html
+++ b/Interactive_Shell/index.html
@@ -8,8 +8,9 @@
 <body>
     <div id="external">
         <div id="form1" class="screen">
-            <textarea readonly id="not_editable">></textarea>
-            <textarea id="demo" onkeypress="return enterKeyPressed(event)"> </textarea>
+            <textarea readonly >></textarea>
+            <textarea id="padre">></textarea>
+            <textarea id="figlio" onkeypress="enterKeyPressed(event)"> </textarea>
             
         </div>
         <div class="options">
