--- a/Interactive_Shell/index.html
+++ b/Interactive_Shell/index.html
@@ -8,8 +8,7 @@
 <body>
     <div id="external">
         <div id="form1" class="screen">
-            <textarea readonly >></textarea>
-            <textarea id="padre">></textarea>
+            <textarea readonly id="padre">></textarea>
             <textarea id="figlio" onkeypress="enterKeyPressed(event)"> </textarea>
             
         </div>
